Cite the test contract in prompts and unify the native-flag rule (#10033)
* Specify citation-based test-contract delivery in prompts

* Cite the test contract in prompts instead of restating it

* Replace flag exceptions with uniform necessity rule

---------

Co-authored-by: Mihailo Markovic <mihailo.markovic@oracle.com>